fixed the div overflowing on smaller screens in message page try 3

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,9 @@
     transform: translateX(-100%);
   }
 }
+.background-image {
+  background-image: url("/bc.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
